# MicroTech

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  LICENSE  README.md  partitions_16m_ota_res_data.csv  sdkconfig.defaults
doc/: code-style.md
main/: CMakeLists.txt  app_main.c  app_runtime.c  app_runtime.h  app_runtime_pm.c  app_runtime_pm.h  idf_component.yml  network_runtime.c  network_runtime.h
main/fs_storage/: fs_storage.c  fs_storage.h
main/res_fs/: README.txt
main/tests/host/: CMakeLists.txt  app_runtime_pm_test.c  app_runtime_test.c  fs_storage_test.c  network_runtime_test.c
main/tests/host/fakes/: esp_err.h  esp_event.h  esp_heap_caps.h  esp_lcd_touch.h  esp_lcd_types.h  esp_littlefs.h  esp_log.h  esp_netif.h  esp_partition.h  esp_vfs_fat.h  lvgl.h  sdkconfig.h
main/tests/host/fakes/freertos/: FreeRTOS.h  task.h
tests/connectivity/: CMakeLists.txt  README.md  test_connectivity_pipeline.c
tests/connectivity/host/: freertos_host.c  host_mailbox_port.c  wifi_service_port_fake.c
tests/connectivity/host/include/: esp_err.h  host_freertos.h  host_wifi_port.h  lvgl.h  mt_log.h
tests/connectivity/host/include/freertos/: FreeRTOS.h  queue.h  semphr.h  task.h
tests/integration/: CMakeLists.txt  README.md  app_builtin_apps.ld  test_audio_demo_adapter.c  test_clock_demo_adapter.c  test_cross_layer.c  test_presentation.c  test_storage_demo_adapter.c
tests/integration/host/: apps_integration_lvgl.c  host_freertos.c  host_services.c  wifi_service_fake.c
tests/integration/host/include/: apps_integration_runtime.h  esp_app_desc.h  esp_err.h  esp_heap_caps.h  esp_random.h  esp_vfs_fat.h  host_freertos.h  host_wifi_service.h  lvgl.h  mt_log.h
tests/integration/host/include/freertos/: FreeRTOS.h  event_groups.h  idf_additions.h  queue.h  semphr.h  task.h
